samples/_failures_safe/1761189067_ff7278_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_608efd84.c: In function ‘main’:
./samples/SAFE/__tmp_608efd84.c:157:5: error: expected expression at end of input
  157 |     add_edge(graph, 0, 2,
      |     ^~~~~~~~
./samples/SAFE/__tmp_608efd84.c:157:5: error: expected declaration or statement at end of input
